--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
             android:id="@+id/tv_current_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="undefinded"
+            android:text="Undefinded"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toRightOf="@id/tv_current_location_label"
             app:layout_constraintTop_toTopOf="parent"
@@ -47,8 +47,8 @@
         android:id="@+id/recycler_venue_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:clipToPadding="false"
+        android:paddingTop="4dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toBottomOf="@id/view_divider"
         />
