--- a/app/src/main/res/layout/activity_venue_detail.xml
+++ b/app/src/main/res/layout/activity_venue_detail.xml
@@ -1,70 +1,157 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="8dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:id="@+id/iv_venue_photo"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:background="@color/gray"
-        app:layout_constraintTop_toTopOf="parent"/>
+    <data>
+        <variable
+            name="viewModel"
+            type="com.soulkey.fspicker.ui.detail.VenueDetailViewModel" />
+    </data>
 
-    <TextView
-        android:id="@+id/tv_venue_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Venue Name"
-        android:textSize="32sp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintTop_toBottomOf="@id/iv_venue_photo"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
-
-    <TextView
-        android:id="@+id/tv_venue_contact_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Contact"
-        android:textSize="20sp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_venue_name"/>
-    <View
-        android:id="@+id/view_contact_divider"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/black"
-        app:layout_constraintTop_toBottomOf="@id/tv_venue_contact_title"/>
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_contact_phone_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/view_contact_divider">
+        android:layout_height="match_parent"
+        android:padding="8dp"
+        tools:context=".ui.detail.VenueDetailActivity">
+
+        <ImageView
+            android:id="@+id/iv_venue_photo"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:background="@color/gray"
+            app:layout_constraintTop_toTopOf="parent"/>
+
         <TextView
-            android:id="@+id/tv_contact_phone_label"
+            android:id="@+id/tv_venue_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Phone"
-            app:layout_constraintHorizontal_weight="3"
-            app:layout_constraintTop_toTopOf="parent"
+            android:text="@{viewModel.venueName}"
+            android:textSize="32sp"
+            android:layout_marginTop="4dp"
+            android:layout_marginRight="8dp"
+            android:ellipsize="marquee"
+            app:layout_constraintTop_toBottomOf="@id/iv_venue_photo"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/tv_contact_phone"/>
+            app:layout_constraintRight_toLeftOf="@id/iv_like_icon"/>
+
+        <ImageView
+            android:id="@+id/iv_like_icon"
+            android:src="@drawable/ic_thumb_up_24px"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            app:layout_constraintTop_toTopOf="@id/tv_venue_name"
+            app:layout_constraintBottom_toBottomOf="@id/tv_venue_name"
+            app:layout_constraintRight_toLeftOf="@id/tv_like_count"/>
         <TextView
-            android:id="@+id/tv_contact_phone"
+            android:id="@+id/tv_like_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="8dp"
+            android:text="@{viewModel.venueLikeCount}"
+            android:textSize="24sp"
+            android:textColor="#FF7777"
+            app:layout_constraintTop_toTopOf="@id/tv_venue_name"
+            app:layout_constraintBottom_toBottomOf="@id/tv_venue_name"
+            app:layout_constraintRight_toRightOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/tv_venue_info_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="000-999-9999"
-            app:layout_constraintHorizontal_weight="7"
-            app:layout_constraintLeft_toRightOf="@id/tv_contact_phone_label"
-            app:layout_constraintRight_toRightOf="parent"/>
+            android:text="Info"
+            android:textSize="20sp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_venue_name"/>
+        <View
+            android:id="@+id/view_info_divider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/black"
+            app:layout_constraintTop_toBottomOf="@id/tv_venue_info_title"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_phone_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/view_info_divider">
+            <TextView
+                android:id="@+id/tv_phone_label"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Phone"
+                app:layout_constraintHorizontal_weight="3"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/tv_phone"/>
+            <TextView
+                android:id="@+id/tv_phone"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.venuePhone}"
+                app:layout_constraintHorizontal_weight="7"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/tv_phone_label"
+                app:layout_constraintRight_toRightOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_location_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/layout_phone_container">
+            <TextView
+                android:id="@+id/tv_location_label"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Location"
+                app:layout_constraintHorizontal_weight="3"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/tv_location"/>
+            <TextView
+                android:id="@+id/tv_location"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.venueAddress}"
+                android:ellipsize="marquee"
+                app:layout_constraintHorizontal_weight="7"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/tv_location_label"
+                app:layout_constraintRight_toRightOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_rating_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/layout_location_container">
+            <TextView
+                android:id="@+id/tv_rating_label"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Rating"
+                app:layout_constraintHorizontal_weight="3"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/tv_rating"/>
+            <TextView
+                android:id="@+id/tv_rating"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.venueRating}"
+                android:ellipsize="marquee"
+                app:layout_constraintHorizontal_weight="7"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/tv_rating_label"
+                app:layout_constraintRight_toRightOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
