--- a/app/src/main/res/layout/activity_venue_detail.xml
+++ b/app/src/main/res/layout/activity_venue_detail.xml
@@ -10,148 +10,183 @@
             type="com.soulkey.fspicker.ui.detail.VenueDetailViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="8dp"
-        tools:context=".ui.detail.VenueDetailActivity">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/iv_venue_photo"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:background="@color/gray"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-        <TextView
-            android:id="@+id/tv_venue_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@{viewModel.venueName}"
-            android:textSize="32sp"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="8dp"
-            android:ellipsize="marquee"
-            app:layout_constraintTop_toBottomOf="@id/iv_venue_photo"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/iv_like_icon"/>
-
-        <ImageView
-            android:id="@+id/iv_like_icon"
-            android:src="@drawable/ic_thumb_up_24px"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            app:layout_constraintTop_toTopOf="@id/tv_venue_name"
-            app:layout_constraintBottom_toBottomOf="@id/tv_venue_name"
-            app:layout_constraintRight_toLeftOf="@id/tv_like_count"/>
-        <TextView
-            android:id="@+id/tv_like_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            android:text="@{viewModel.venueLikeCount}"
-            android:textSize="24sp"
-            android:textColor="#FF7777"
-            app:layout_constraintTop_toTopOf="@id/tv_venue_name"
-            app:layout_constraintBottom_toBottomOf="@id/tv_venue_name"
-            app:layout_constraintRight_toRightOf="parent"
-            />
-
-        <TextView
-            android:id="@+id/tv_venue_info_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Info"
-            android:textSize="20sp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_venue_name"/>
-        <View
-            android:id="@+id/view_info_divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/tv_venue_info_title"/>
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layout_phone_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/view_info_divider">
+            android:layout_height="match_parent"
+            android:padding="8dp"
+            tools:context=".ui.detail.VenueDetailActivity">
+
+            <ImageView
+                android:id="@+id/iv_venue_photo"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:background="@color/gray"
+                app:layout_constraintTop_toTopOf="parent"/>
+
             <TextView
-                android:id="@+id/tv_phone_label"
+                android:id="@+id/tv_venue_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Phone"
-                app:layout_constraintHorizontal_weight="3"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/tv_phone"/>
-            <TextView
-                android:id="@+id/tv_phone"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@{viewModel.venuePhone}"
-                app:layout_constraintHorizontal_weight="7"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/tv_phone_label"
-                app:layout_constraintRight_toRightOf="parent"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layout_location_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/layout_phone_container">
-            <TextView
-                android:id="@+id/tv_location_label"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Location"
-                app:layout_constraintHorizontal_weight="3"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/tv_location"/>
-            <TextView
-                android:id="@+id/tv_location"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@{viewModel.venueAddress}"
+                android:text="@{viewModel.venueName}"
+                android:textSize="32sp"
+                android:fontFamily="@font/opensans_extrabold"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="8dp"
                 android:ellipsize="marquee"
-                app:layout_constraintHorizontal_weight="7"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/tv_location_label"
-                app:layout_constraintRight_toRightOf="parent"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layout_rating_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/layout_location_container">
-            <TextView
-                android:id="@+id/tv_rating_label"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Rating"
-                app:layout_constraintHorizontal_weight="3"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/iv_venue_photo"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/tv_rating"/>
+                app:layout_constraintRight_toLeftOf="@id/iv_like_icon"/>
+
+            <ImageView
+                android:id="@+id/iv_like_icon"
+                android:src="@drawable/ic_thumb_up_24px"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintTop_toTopOf="@id/tv_venue_name"
+                app:layout_constraintBottom_toBottomOf="@id/tv_venue_name"
+                app:layout_constraintRight_toLeftOf="@id/tv_like_count"/>
             <TextView
-                android:id="@+id/tv_rating"
+                android:id="@+id/tv_like_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:text="@{viewModel.venueLikeCount}"
+                android:textSize="24sp"
+                android:textColor="#FF7777"
+                app:layout_constraintTop_toTopOf="@id/tv_venue_name"
+                app:layout_constraintBottom_toBottomOf="@id/tv_venue_name"
+                app:layout_constraintRight_toRightOf="parent" />
+            <TextView
+                android:id="@+id/tv_venue_info_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@{viewModel.venueRating}"
-                android:ellipsize="marquee"
-                app:layout_constraintHorizontal_weight="7"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/tv_rating_label"
-                app:layout_constraintRight_toRightOf="parent"/>
+                android:text="Info"
+                android:textSize="20sp"
+                android:fontFamily="@font/opensans_extrabold"
+                android:layout_marginTop="32dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_venue_name"/>
+            <View
+                android:id="@+id/view_info_divider"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="2dp"
+                android:background="@color/black"
+                app:layout_constraintTop_toBottomOf="@id/tv_venue_info_title"/>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layout_phone_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="4dp"
+                app:layout_constraintTop_toBottomOf="@id/view_info_divider">
+                <TextView
+                    android:id="@+id/tv_phone_label"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Phone"
+                    android:fontFamily="@font/opensans_bold"
+                    app:layout_constraintHorizontal_weight="3"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toLeftOf="@id/tv_phone"/>
+                <TextView
+                    android:id="@+id/tv_phone"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@{viewModel.venuePhone}"
+                    app:layout_constraintHorizontal_weight="7"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toRightOf="@id/tv_phone_label"
+                    app:layout_constraintRight_toRightOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layout_location_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="4dp"
+                app:layout_constraintTop_toBottomOf="@id/layout_phone_container">
+                <TextView
+                    android:id="@+id/tv_location_label"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Location"
+                    android:fontFamily="@font/opensans_bold"
+                    app:layout_constraintHorizontal_weight="3"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toLeftOf="@id/tv_location"/>
+                <TextView
+                    android:id="@+id/tv_location"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@{viewModel.venueAddress}"
+                    android:ellipsize="marquee"
+                    app:layout_constraintHorizontal_weight="7"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toRightOf="@id/tv_location_label"
+                    app:layout_constraintRight_toRightOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layout_rating_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="4dp"
+                app:layout_constraintTop_toBottomOf="@id/layout_location_container">
+                <TextView
+                    android:id="@+id/tv_rating_label"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Rating"
+                    android:fontFamily="@font/opensans_bold"
+                    app:layout_constraintHorizontal_weight="3"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toLeftOf="@id/tv_rating"/>
+                <TextView
+                    android:id="@+id/tv_rating"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@{viewModel.venueRating}"
+                    android:ellipsize="marquee"
+                    app:layout_constraintHorizontal_weight="7"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toRightOf="@id/tv_rating_label"
+                    app:layout_constraintRight_toRightOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/tv_venue_tips_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Tips"
+                android:textSize="20sp"
+                android:fontFamily="@font/opensans_extrabold"
+                android:layout_marginTop="32dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/layout_rating_container"/>
+            <View
+                android:id="@+id/view_tips_divider"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="2dp"
+                android:background="@color/black"
+                app:layout_constraintTop_toBottomOf="@id/tv_venue_tips_title"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_tips_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="4dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintTop_toBottomOf="@id/view_tips_divider" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 
-
-
-
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
