--- a/app/src/main/res/layout/item_venue.xml
+++ b/app/src/main/res/layout/item_venue.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
+    android:background="?android:attr/selectableItemBackground"
     android:elevation="4dp"
     app:cardCornerRadius="4dp">
 
@@ -17,7 +18,6 @@
             android:id="@+id/iv_venue_photo"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:contentDescription="Venue's Photo"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
@@ -25,7 +25,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
             app:layout_constraintTop_toTopOf="@id/iv_venue_photo"
             app:layout_constraintBottom_toBottomOf="@id/iv_venue_photo"
             app:layout_constraintLeft_toRightOf="@id/iv_venue_photo"
@@ -36,6 +36,7 @@
                 android:layout_height="wrap_content"
                 android:text="Venue Name"
                 android:textSize="16sp"
+                android:fontFamily="@font/opensans_extrabold"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
