--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,30 @@
         android:layout_height="match_parent"
         tools:context=".ui.main.MainActivity">
 
+        <TextView
+            android:id="@+id/tv_guide_to_refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Allow the Location Setting \n&amp;\n Press Refresh Button"
+            android:textSize="24sp"
+            android:fontFamily="@font/opensans_extrabold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+        <androidx.core.widget.ContentLoadingProgressBar
+            android:id="@+id/pb_venues_loading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            style="@style/Widget.AppCompat.ProgressBar"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_current_location_info"
             android:layout_width="match_parent"
@@ -62,6 +86,8 @@
             app:layout_constraintTop_toBottomOf="@id/view_divider"
             app:layout_constraintBottom_toBottomOf="parent"
             />
+
+
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_refresh"
